--- a/bibliography-files/syllabus-references.bib
+++ b/bibliography-files/syllabus-references.bib
@@ -43,6 +43,17 @@
   file = {C:\Users\user\Zotero\storage\C8PRYFA4\Barbayannis et al. - 2022 - Academic Stress and Mental Well-Being in College S.pdf}
 }
 
+@mvbook{batra21,
+  title = {The {{Epidemiologist R Handbook}}},
+  author = {Batra, Neale},
+  date = {2021},
+  volume = {1},
+  url = {https://epirhandbook.com/},
+  urldate = {2024-08-11},
+  volumes = {1},
+  file = {C:\Users\user\Zotero\storage\A4F82GPA\epirhandbook.com.html}
+}
+
 @article{broockman_skovron18a,
   title = {Bias in Perceptions of Public Opinion among Political Elites},
   author = {Broockman, David E. and Skovron, Christopher},
@@ -118,6 +129,13 @@
   pagetotal = {957}
 }
 
+@report{floyd10,
+  title = {Statistics for Economists: A Beginning},
+  author = {Floyd, John E},
+  date = {2010},
+  url = {https://chrisbillakings.wordpress.com/wp-content/uploads/2015/06/tmp_ecstats1727528223.pdf}
+}
+
 @book{heiss20,
   title = {Using {{R}} for {{Introductory Econometrics}}},
   author = {Heiss, Florian},
@@ -156,6 +174,18 @@
   isbn = {978-1-03-212578-7},
   langid = {english},
   pagetotal = {646}
+}
+
+@book{keyes24,
+  title = {R for the {{Rest}} of {{Us}}: {{A Statistics-Free Introduction}}},
+  author = {Keyes, David},
+  date = {2024},
+  edition = {1},
+  publisher = {No Starch Press},
+  url = {https://book.rfortherestofus.com/},
+  urldate = {2024-08-11},
+  isbn = {1-71850-332-6},
+  file = {C:\Users\user\Zotero\storage\FCFNDMEY\1718503326.html}
 }
 
 @incollection{lupu_zechmeister20,
@@ -233,6 +263,15 @@
   publisher = {" O'Reilly Media, Inc."},
   url = {https://r4ds.hadley.nz/},
   isbn = {1-4920-9736-5}
+}
+
+@book{wickham19,
+  title = {Advanced {{R}}},
+  author = {Wickham, Hadley},
+  date = {2019},
+  publisher = {{Chapman and Hall/CRC}},
+  url = {https://adv-r.hadley.nz/},
+  isbn = {1-351-20131-X}
 }
 
 @book{wooldridge20,
