--- a/syllabus_intro_to_stats.qmd
+++ b/syllabus_intro_to_stats.qmd
@@ -161,6 +161,8 @@ There is no required textbook for this course, as I will provide slides for all 
 
 - *Discovering statistics using R*, @field_etal12.
 
+- *Statistics for economists: a beginning*, @floyd10.
+
 - The Effect, @huntington-klein22^[This textbook, while focused on causality, describes much of the modern R development environment for statistics and econometrics. It also contains Stata and Python code.].
 
 - The Library of Statistical Techniques [LOST](https://lost-stats.github.io/)^[An open-source website with a collection of statistical techniques and their implementations in R, Python and Stata. It is a great resource for those who want to learn more about specific statistical methods.].
